autumn/tests/compile-fail/non_async_main.rs
#[autumn::main]
fn main() {
    println!("not async");
}
