autumn/tests/compile-fail/non_async_main.stderr
error: the main function must be async
 --> tests/compile-fail/non_async_main.rs:2:1
  |
2 | fn main() {
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/non_async_main.rs:4:2
  |
4 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/non_async_main.rs`
